--- a/index.html
+++ b/index.html
@@ -6,9 +6,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+    <script id="debug-script" src="https://cdn.jsdelivr.net/gh/MickShannahan/style-debug@latest/debug.min.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="debug">
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Mey the beast team win!!!</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="d-flex justify-content-around">
+            <div>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+            <div>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-flex justify-content-around">
+          <div class="col-6">
+            <div class="d-flex justify-content-around bg-primary">
+              <button>$$$</button>
+              <button>$$$</button>
+              <button>$$$</button>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="d-flex justify-content-around bg-warning">
+              <button>$$$</button>
+              <button>$$$</button>
+              <button>$$$</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
