--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>Mey the beast team win!!!</h1>
+            <h1>May the beast team win!!!</h1>
           </div>
         </div>
       </div>
@@ -28,6 +28,7 @@
             </div>
             <div id="teamTwo">
               <p>Lorem ipsum dolor sit.</p>
+              <p>Your mulla: $<samp id="back"></samp></p>
             </div>
           </div>
         </div>
@@ -36,9 +37,10 @@
         <div class="d-flex justify-content-around">
           <div class="col-6">
             <div class="d-flex justify-content-around bg-primary">
-              <button onclick="betTenDallers()">$$$</button>
-              <button>$$$</button>
-              <button>$$$</button>
+              <button onclick="betTenDallers(10)">$$$</button>
+              <button onclick="fiftyOnTeamOne()">$$$</button>
+              <button onclick="hundredOnTeamOne()">$$$</button>
+              <button onclick="betItAll()">$$$$$$$$</button>
             </div>
           </div>
           <div class="col-6">
